--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: aqi-app
-          image: pandeyrr>/aqi-project:latest
+          image: pandeyrr/aqi-project:latest
           ports:
             - containerPort: 8080
